# flash

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
flash/: __init__.py  cli.py  voice.py
tests/: __init__.py  test_cli.py  test_voice.py
tests/fixtures/: basic_cards.csv  malformed.csv  multi_column.csv  unicode_cards.csv
